[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "string"] }
clap_complete = "4.6.5"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
url = "2.5.8"
